--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: articles
 heading: Watermelon Blog
 subheading: 'Default'
-banner: 'default'
+banner: /assets/images/banners/watermelon_4x.png
 ---
 
 {{ content }}
