--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -561,7 +561,7 @@ html {
   display: block;
   position: relative;
   height: $banner-height;
-  background-color: rgb(247, 199, 199);;
+  background-color: #84719c;
   transition: height 0.2s;
 
   .page-banner-img {
