--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@ sidebar:
   <section>
 
     {%- assign name = 'banner' -%}
+    <link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon.png">
     {%- include functions.html func='get_value' -%}
     {%- assign banner = return -%}
 
