--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -4,6 +4,7 @@ sidebar: category-list
 ---
 
 <div class="articles">
+  <link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon.png">
   {% if page.banner == nil %}
     {% assign banner = page.title %}
   {% endif %}
