--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+  <link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon2.png">
   {%- include head.html -%}
 
   <body>
